<!--
  ~     Kraft: Lightweight Minecraft client for Android featuring modules support and other task automation
  ~     Copyright (C) 2020  Cubxity
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Kraft</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_sessions">Sessions</string>
    <string name="title_settings">Settings</string>
    <string name="add_account_description">Add account</string>
    <string name="create_session_description">Create session</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_session">SessionActivity</string>
    <string name="tab_chat">Chat</string>
    <string name="port">Port</string>
    <string name="host">Host</string>
    <string name="session_name">Session name</string>
    <string name="account">Account</string>
    <string name="default_port">25565</string>
    <string name="empty_name">Name can\'t be empty</string>
    <string name="toast_empty_name">Name can\'t be empty</string>
    <string name="toast_empty_host">Host can\'t be empty</string>
    <string name="toast_no_account">You must select an account</string>
    <string name="remove_account">Remove account</string>
    <string name="remove_session">Remove session</string>
    <string name="chat_hint">Chat</string>
    <string name="remove_server">Remove server</string>
    <string name="server_name">Server name</string>
    <string name="title_servers">Servers</string>
    <string name="add_server_description">Add server</string>
</resources>