<?xml version="1.0" encoding="utf-8"?><!--
  ~     Kraft: Lightweight Minecraft client for Android featuring modules support and other task automation
  ~     Copyright (C) 2020  Cubxity
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_sessions">

    <fragment
        android:id="@+id/navigation_accounts"
        android:name="dev.cubxity.kraft.ui.accounts.AccountsFragment"
        android:label="@string/title_accounts"
        tools:layout="@layout/fragment_accounts" />

    <fragment
        android:id="@+id/navigation_sessions"
        android:name="dev.cubxity.kraft.ui.sessions.SessionsFragment"
        android:label="@string/title_sessions"
        tools:layout="@layout/fragment_sessions" />

    <fragment
        android:id="@+id/navigation_servers"
        android:name="dev.cubxity.kraft.ui.servers.ServersFragment"
        android:label="@string/title_servers"
        tools:layout="@layout/fragment_servers" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="dev.cubxity.kraft.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>