<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Kraft: Lightweight Minecraft client for Android featuring modules support and other task automation
  ~     Copyright (C) 2020  Cubxity
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_accounts"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/title_accounts" />

    <item
        android:id="@+id/navigation_sessions"
        android:icon="@drawable/ic_baseline_dashboard_24"
        android:title="@string/title_sessions" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />

</menu>